--- a/index.html
+++ b/index.html
@@ -1,64 +1,142 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Map the road </title>
+	<title>Map the road</title>
+	<link rel="stylesheet" href="http://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+	<script src="http://code.jquery.com/jquery-1.10.2.js"></script>
+	<script src="http://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+	<script type="text/javascript">
+		$(function() {
+			$( "#sortable1, #sortable2" ).sortable({
+				connectWith: ".connectedSortable"
+			}).disableSelection();
+		});
+	</script>
+
 	<style type="text/css">
-	body {
-		background-color: #EBE8E4;
-		color: #222;
-		font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-		font-weight: 300;
-		font-size: 15px;
-	}
+		body {
+			background-color: #EBE8E4;
+			color: #222;
+			font-family: Helvetica;
+			font-weight: 300;
+			font-size: 15px;
+		}
 
-	nav, footer {
-		background-color: #fff;
-		border: 1px solid #dedede;
-		border-radius: 4px;
-		box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.055);
-		color: #888;
-		display: block;
-		margin: 8px 22px 8px 22px;
-		overflow: hidden;
-		width: 90%; 
-	}
+		nav, footer, section {
+			background-color: #fff;
+			border: 1px solid #dedede;
+			border-radius: 4px;
+			box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.055);
+			color: #888;
+			display: block;
+			margin: 8px 22px 8px 22px;
+			overflow: hidden;
+			width: 90%; 
+		}
 
-	nav ul {
-		margin: 0;
-		padding: 0;
-	}
+		nav ul {
+			margin: 0;
+			padding: 0;
+		}
 
-	nav ul li {
-		display: inline-block;
-		list-style-type: none;
-		
-		-webkit-transition: all 0.2s;
-		-moz-transition: all 0.2s;
-		-ms-transition: all 0.2s;
-		-o-transition: all 0.2s;
-		transition: all 0.2s; 
-	}
-	
-	nav > ul > li > a {
-		color: #aaa;
-		display: block;
-		line-height: 56px;
-		padding: 0 24px;
-		text-decoration: none;
-	}
-	footer {
-		text-align: center;
-	}
+		nav ul li {
+			display: inline-block;
+			list-style-type: none;
+
+			-webkit-transition: all 0.2s;
+			-moz-transition: all 0.2s;
+			-ms-transition: all 0.2s;
+			-o-transition: all 0.2s;
+			transition: all 0.2s; 
+		}
+
+		nav > ul > li > a {
+			color: #aaa;
+			display: block;
+			line-height: 56px;
+			padding: 0 24px;
+			text-decoration: none;
+		}
+		footer {
+			text-align: center;
+		}
+		/****************** Lists***/
+		#sortable1, #sortable2 {
+			border: 1px solid #eee;
+			width: 142px;
+			min-height: 20px;
+			list-style-type: none;
+			margin: 0;
+			padding: 5px 0 0 0;
+			float: left;
+			margin-right: 10px;
+		}
+		#sortable1 li, #sortable2 li {
+			margin: 0 5px 5px 5px;
+			padding: 5px;
+			font-size: 1.2em;
+			width: 120px;
+		}
+		.ui-state-highlight {
+			font-family: Helvetica;
+			font-weight: 200;
+			font-size: 11px;
+		}
+
 	</style>
 </head>
 <body>
-<header></header>
-<nav>
-	<ul>
-		<li><a href="#">Add a release</a></li> 
-		<li><a href="#">Add a sprint</a></li>	
-	</ul>
-</nav>
-<footer>Map the road: Help you to draw and define a roadmap</footer>
+	<header></header>
+	<nav>
+		<ul>
+			<li><a href="#">Add a release</a></li> 
+			<li><a href="#">Add a sprint</a></li>	
+		</ul>
+	</nav>
+
+	<section>
+		<div id="backlog">
+			<ul id="sortable1" class="connectedSortable">
+				<li class="ui-state-default">Item 1</li>
+				<li class="ui-state-default">Item 2</li>
+				<li class="ui-state-default">Item 3</li>
+				<li class="ui-state-default">Item 4</li>
+				<li class="ui-state-default">Item 5</li>
+
+				<li class="ui-state-default">Item 3</li>
+				<li class="ui-state-default">Item 4</li>
+				<li class="ui-state-default">Item 5</li>
+
+				<li class="ui-state-default">Item 3</li>
+				<li class="ui-state-default">Item 4</li>
+				<li class="ui-state-default">Item 5</li>
+
+				<li class="ui-state-default">Item 3</li>
+				<li class="ui-state-default">Item 4</li>
+				<li class="ui-state-default">Item 5</li>
+
+				<li class="ui-state-default">Item 3</li>
+				<li class="ui-state-default">Item 4</li>
+				<li class="ui-state-default">Item 5</li>
+
+				<li class="ui-state-default">Item 3</li>
+				<li class="ui-state-default">Item 4</li>
+				<li class="ui-state-default">Item 5</li>	
+			</ul>
+		</div>
+		<div id="sprints">
+			<ul id="sortable2" class="connectedSortable">
+				<li class="ui-state-highlight">Item 1</li>
+				<li class="ui-state-highlight">Item 2</li>
+			</ul>
+			<ul id="sortable2" class="connectedSortable">		
+				<li class="ui-state-highlight">Item 3</li>
+				<li class="ui-state-highlight">Item 4</li>
+				<li class="ui-state-highlight">Item 5</li>
+			</ul>
+		</div>
+	</section>
+
+	<footer>Map the road: Help you to draw and define a roadmap</footer>
 </body>
 </html>
